tests/relay/relay.exp
Error: Profile.js:19
 19:     (this.props.foo: empty); // Error: number ~> empty
          ^^^^^^^^^^^^^^ Cannot cast `this.props.foo` to empty because number [1] is incompatible with empty [2].
  References:
   19:     (this.props.foo: empty); // Error: number ~> empty
            ^^^^^^^^^^^^^^ [1]: number
   19:     (this.props.foo: empty); // Error: number ~> empty
                            ^^^^^ [2]: empty

Error: Profile.js:20
 20:     (this.props.user.id: empty); // Error: string ~> empty
          ^^^^^^^^^^^^^^^^^^ Cannot cast `this.props.user.id` to empty because string [1] is incompatible with empty [2].
  References:
   20:     (this.props.user.id: empty); // Error: string ~> empty
            ^^^^^^^^^^^^^^^^^^ [1]: string
   20:     (this.props.user.id: empty); // Error: string ~> empty
                                ^^^^^ [2]: empty

Error: Profile.js:21
 21:     (this.props.user.name: empty); // Error: string ~> empty
          ^^^^^^^^^^^^^^^^^^^^ Cannot cast `this.props.user.name` to empty because string [1] is incompatible with empty [2].
  References:
   21:     (this.props.user.name: empty); // Error: string ~> empty
            ^^^^^^^^^^^^^^^^^^^^ [1]: string
   21:     (this.props.user.name: empty); // Error: string ~> empty
                                  ^^^^^ [2]: empty

Error: Profile.js:22
 22:     (this.props.user.pic.id: empty); // Error: string ~> empty
          ^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `this.props.user.pic.id` to empty because string [1] is incompatible with empty [2].
  References:
   22:     (this.props.user.pic.id: empty); // Error: string ~> empty
            ^^^^^^^^^^^^^^^^^^^^^^ [1]: string
   22:     (this.props.user.pic.id: empty); // Error: string ~> empty
                                    ^^^^^ [2]: empty

Error: Profile.js:23
 23:     <ProfilePic image={{url: 'https://facebook.com'}} />; // Error: object ~> opaque type
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See: Relay.js:46
  Property `image` is incompatible:
     23:     <ProfilePic image={{url: 'https://facebook.com'}} />; // Error: object ~> opaque type
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
     46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ProfilePic_imageRef. See: Relay.js:46

Error: ProfilePic.js:17
 17:     (this.props.image.url: empty); // Error: string ~> empty
          ^^^^^^^^^^^^^^^^^^^^ Cannot cast `this.props.image.url` to empty because string [1] is incompatible with empty [2].
  References:
   17:     (this.props.image.url: empty); // Error: string ~> empty
            ^^^^^^^^^^^^^^^^^^^^ [1]: string
   17:     (this.props.image.url: empty); // Error: string ~> empty
                                  ^^^^^ [2]: empty

Error: main.js:15
 15: <Profile user={userRef} />; // Error: Missing foo
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See: Relay.js:46
  Property `foo` is incompatible:
     46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `foo`. Property not found in. See: Relay.js:46
     15: <Profile user={userRef} />; // Error: Missing foo
         ^^^^^^^^^^^^^^^^^^^^^^^^^^ props

Error: main.js:16
 16: <Profile foo={42} />; // Error: Missing user
     ^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See: Relay.js:46
  Property `user` is incompatible:
     46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `user`. Property not found in. See: Relay.js:46
     16: <Profile foo={42} />; // Error: Missing user
         ^^^^^^^^^^^^^^^^^^^^ props

Error: main.js:17
 17: <Profile user={userRef} foo="bar" />; // Error: string ~> number
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See: Relay.js:46
  Property `foo` is incompatible:
     17: <Profile user={userRef} foo="bar" />; // Error: string ~> number
                                     ^^^^^ string. This type is incompatible with
     46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number. See: Relay.js:46

Error: main.js:18
 18: <Profile />; // Error: Missing user and foo
     ^^^^^^^^^^^ props. This type is incompatible with
 46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See: Relay.js:46
  Property `foo` is incompatible:
     46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `foo`. Property not found in. See: Relay.js:46
     18: <Profile />; // Error: Missing user and foo
         ^^^^^^^^^^^ props

Error: main.js:18
 18: <Profile />; // Error: Missing user and foo
     ^^^^^^^^^^^ props. This type is incompatible with
 46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See: Relay.js:46
  Property `user` is incompatible:
     46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `user`. Property not found in. See: Relay.js:46
     18: <Profile />; // Error: Missing user and foo
         ^^^^^^^^^^^ props

Error: main.js:19
 19: <Profile user={user} foo={42} />; // Error: You must pass in a ref
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See: Relay.js:46
  Property `user` is incompatible:
     19: <Profile user={user} foo={42} />; // Error: You must pass in a ref
                        ^^^^ object type. This type is incompatible with
     46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Profile_userRef. See: Relay.js:46

Error: main.js:20
 20: <Profile user={user} foo="bar" />; // Error: You must pass in a ref and string ~> number
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See: Relay.js:46
  Property `foo` is incompatible:
     20: <Profile user={user} foo="bar" />; // Error: You must pass in a ref and string ~> number
                                  ^^^^^ string. This type is incompatible with
     46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number. See: Relay.js:46

Error: main.js:20
 20: <Profile user={user} foo="bar" />; // Error: You must pass in a ref and string ~> number
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See: Relay.js:46
  Property `user` is incompatible:
     20: <Profile user={user} foo="bar" />; // Error: You must pass in a ref and string ~> number
                        ^^^^ object type. This type is incompatible with
     46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Profile_userRef. See: Relay.js:46

Error: main.js:21
 21: <Profile user={(null: mixed)} foo={(null: mixed)} />; // Error: mixed ~> ref and mixed ~> number
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See: Relay.js:46
  Property `foo` is incompatible:
     21: <Profile user={(null: mixed)} foo={(null: mixed)} />; // Error: mixed ~> ref and mixed ~> number
                                                   ^^^^^ mixed. This type is incompatible with
     46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number. See: Relay.js:46

Error: main.js:21
 21: <Profile user={(null: mixed)} foo={(null: mixed)} />; // Error: mixed ~> ref and mixed ~> number
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. See: Relay.js:46
  Property `user` is incompatible:
     21: <Profile user={(null: mixed)} foo={(null: mixed)} />; // Error: mixed ~> ref and mixed ~> number
                               ^^^^^ mixed. This type is incompatible with
     46: ): React.ComponentType<$ObjMap<Props, GetPropFragmentRef>> {
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Profile_userRef. See: Relay.js:46

Error: more.js:92
 92: <SingularTest onClick={cb} string="x" user={null} nullableUser={null} />;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `user` is incompatible:
     92: <SingularTest onClick={cb} string="x" user={null} nullableUser={null} />;
                                                     ^^^^ null. This type is incompatible with
                                               v-------
     21: type $RelayProps<Props, RelayPropT> = $ObjMap<
     22:   $Diff<Props, {relay: RelayPropT | void}>,
     23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
    ...:
     30: >;
         ^ object type

Error: more.js:95
 95: <SingularTest onClick={cb} string="x" nullableUser={null} />;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `user` is incompatible:
     35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `user`. Property not found in
     95: <SingularTest onClick={cb} string="x" nullableUser={null} />;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props

Error: more.js:98
 98: <SingularTest onClick={cb} string="x" user={nonUserRef} nullableUser={null} />;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `user` is incompatible:
     98: <SingularTest onClick={cb} string="x" user={nonUserRef} nullableUser={null} />;
                                                     ^^^^^^^^^^ object type. This type is incompatible with
                                               v-------
     21: type $RelayProps<Props, RelayPropT> = $ObjMap<
     22:   $Diff<Props, {relay: RelayPropT | void}>,
     23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
    ...:
     30: >;
         ^ object type
      Property `__fragments` is incompatible:
         86:   +__fragments: FragmentReference<{thing: true}>,
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ FragmentReference. Has some incompatible type argument with
         23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
                                                                                    ^^^^^^^^^^^^^^^^^^^^ FragmentReference
          Type argument `T` is incompatible:
             23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
                          ^^^^^^^^^^^^^^ FragmentTypeof. This type is incompatible with
             86:   +__fragments: FragmentReference<{thing: true}>,
                                                   ^^^^^^^^^^^^^ object type

Error: more.js:98
 98: <SingularTest onClick={cb} string="x" user={nonUserRef} nullableUser={null} />;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `user` is incompatible:
     98: <SingularTest onClick={cb} string="x" user={nonUserRef} nullableUser={null} />;
                                                     ^^^^^^^^^^ object type. This type is incompatible with
                                               v-------
     21: type $RelayProps<Props, RelayPropT> = $ObjMap<
     22:   $Diff<Props, {relay: RelayPropT | void}>,
     23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
    ...:
     30: >;
         ^ object type
      Property `__fragments` is incompatible:
         86:   +__fragments: FragmentReference<{thing: true}>,
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ FragmentReference. Has some incompatible type argument with
         23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
                                                                                    ^^^^^^^^^^^^^^^^^^^^ FragmentReference
          Type argument `T` is incompatible:
             86:   +__fragments: FragmentReference<{thing: true}>,
                                                   ^^^^^^^^^^^^^ object type. This type is incompatible with
             43:   +__typeof: RelayModernTypedFlowtest_user$reference,
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ FragmentTypeof

Error: more.js:121
     v------------
121: <SingularTest
122:   onClick={cb}
123:   string="x"
...:
127: />;
     -^ props. This type is incompatible with
 35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `optionalUser` is incompatible:
    126:   optionalUser={null}
                         ^^^^ null. This type is incompatible with
                                               v-------
     21: type $RelayProps<Props, RelayPropT> = $ObjMap<
     22:   $Diff<Props, {relay: RelayPropT | void}>,
     23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
    ...:
     30: >;
         ^ object type

Error: more.js:144
144: <PluralTest users={null} nullableUsers={null} />;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `users` is incompatible:
    144: <PluralTest users={null} nullableUsers={null} />;
                            ^^^^ null. This type is incompatible with
                                               v-------
     21: type $RelayProps<Props, RelayPropT> = $ObjMap<
     22:   $Diff<Props, {relay: RelayPropT | void}>,
     23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
    ...:
     30: >;
         ^ read-only array type

Error: more.js:147
147: <PluralTest nullableUsers={null} />;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `users` is incompatible:
     35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `users`. Property not found in
    147: <PluralTest nullableUsers={null} />;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props

Error: more.js:150
150: <PluralTest users={[nonUserRef]} nullableUsers={null} />;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `users` is incompatible:
    150: <PluralTest users={[nonUserRef]} nullableUsers={null} />;
                            ^^^^^^^^^^^^ array literal. Has some incompatible type argument with
                                               v-------
     21: type $RelayProps<Props, RelayPropT> = $ObjMap<
     22:   $Diff<Props, {relay: RelayPropT | void}>,
     23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
    ...:
     30: >;
         ^ read-only array type
      Type argument `T` is incompatible:
        150: <PluralTest users={[nonUserRef]} nullableUsers={null} />;
                                 ^^^^^^^^^^ object type. This type is incompatible with
         25:   & (<T: FragmentTypeof, Data: {+__typeof: T}>($ReadOnlyArray<Data>) => $ReadOnlyArray<{+__fragments: FragmentReference<T>}>)
                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
          Property `__fragments` is incompatible:
             86:   +__fragments: FragmentReference<{thing: true}>,
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ FragmentReference. Has some incompatible type argument with
             25:   & (<T: FragmentTypeof, Data: {+__typeof: T}>($ReadOnlyArray<Data>) => $ReadOnlyArray<{+__fragments: FragmentReference<T>}>)
                                                                                                                       ^^^^^^^^^^^^^^^^^^^^ FragmentReference
              Type argument `T` is incompatible:
                 25:   & (<T: FragmentTypeof, Data: {+__typeof: T}>($ReadOnlyArray<Data>) => $ReadOnlyArray<{+__fragments: FragmentReference<T>}>)
                              ^^^^^^^^^^^^^^ FragmentTypeof. This type is incompatible with
                 86:   +__fragments: FragmentReference<{thing: true}>,
                                                       ^^^^^^^^^^^^^ object type

Error: more.js:150
150: <PluralTest users={[nonUserRef]} nullableUsers={null} />;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `users` is incompatible:
    150: <PluralTest users={[nonUserRef]} nullableUsers={null} />;
                            ^^^^^^^^^^^^ array literal. Has some incompatible type argument with
                                               v-------
     21: type $RelayProps<Props, RelayPropT> = $ObjMap<
     22:   $Diff<Props, {relay: RelayPropT | void}>,
     23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
    ...:
     30: >;
         ^ read-only array type
      Type argument `T` is incompatible:
        150: <PluralTest users={[nonUserRef]} nullableUsers={null} />;
                                 ^^^^^^^^^^ object type. This type is incompatible with
         25:   & (<T: FragmentTypeof, Data: {+__typeof: T}>($ReadOnlyArray<Data>) => $ReadOnlyArray<{+__fragments: FragmentReference<T>}>)
                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
          Property `__fragments` is incompatible:
             86:   +__fragments: FragmentReference<{thing: true}>,
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ FragmentReference. Has some incompatible type argument with
             25:   & (<T: FragmentTypeof, Data: {+__typeof: T}>($ReadOnlyArray<Data>) => $ReadOnlyArray<{+__fragments: FragmentReference<T>}>)
                                                                                                                       ^^^^^^^^^^^^^^^^^^^^ FragmentReference
              Type argument `T` is incompatible:
                 86:   +__fragments: FragmentReference<{thing: true}>,
                                                       ^^^^^^^^^^^^^ object type. This type is incompatible with
                 49:   +__typeof: RelayModernTypedFlowtest_users$reference,
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ FragmentTypeof

Error: more.js:174
174: <PluralTest users={usersRef} nullableUsers={null} optionalUsers={null} />;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `optionalUsers` is incompatible:
    174: <PluralTest users={usersRef} nullableUsers={null} optionalUsers={null} />;
                                                                          ^^^^ null. This type is incompatible with
                                               v-------
     21: type $RelayProps<Props, RelayPropT> = $ObjMap<
     22:   $Diff<Props, {relay: RelayPropT | void}>,
     23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
    ...:
     30: >;
         ^ read-only array type

Error: more.js:177
177: <SingularTest onClick={'cb'} string="x" user={aUserRef} nullableUser={null} />;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `onClick` is incompatible:
    177: <SingularTest onClick={'cb'} string="x" user={aUserRef} nullableUser={null} />;
                                ^^^^ string. This type is incompatible with
                                               v-------
     21: type $RelayProps<Props, RelayPropT> = $ObjMap<
     22:   $Diff<Props, {relay: RelayPropT | void}>,
     23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
    ...:
     30: >;
         ^ function type

Error: more.js:180
180: <SingularTest onClick={cb} string={1} user={aUserRef} nullableUser={null} />;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props. This type is incompatible with
 35: ): React.ComponentType<$RelayProps<Props, RelayProp>>;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `string` is incompatible:
    180: <SingularTest onClick={cb} string={1} user={aUserRef} nullableUser={null} />;
                                            ^ number. This type is incompatible with
                                               v-------
     21: type $RelayProps<Props, RelayPropT> = $ObjMap<
     22:   $Diff<Props, {relay: RelayPropT | void}>,
     23:   & (<T: FragmentTypeof, Data: {+__typeof: T}>(Data) => {+__fragments: FragmentReference<T>})
    ...:
     30: >;
         ^ string


Found 28 errors
